--- a/images/friends.html
+++ b/images/friends.html
@@ -8,10 +8,11 @@
             border: 1px solid #ccc;
             padding: 10px;
             margin: 10px;
+            style = "background-image:url('images/sounder(1).jpg'); background-size: 100%">
         }
     </style>
 </head>
-<body style = "background-image:url('images/sounder(1).jpg'); background-size: 100%">
+<body>
     <h1>Meet My Friends</h1>
     
     <div class="friend">
