--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             border: 1px solid #ccc;
             padding: 10px;
             margin: 10px;
-	    
+	    background-image:url('/sounder(1).jpg'); background-size: 10%;
         }
     </style>
 </head>
