--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Meet My Friends</title>
     
 </head>
-<body style = "background-image:url('sounder(1).jpg'); background-size: 10%;">
+<body style = "background-image:url('./sounder(1).jpg'); background-size: 100%;">
     <h1>Meet My Friend</h1>
     
    
