--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
 </head>
 <body style = "background-image:url('./sounder(1).jpg'); background-size: 100%;">
-    <img src="sounder(1).jpg" alt="alternate-text">
+    <img src="./sounder(1).jpg" alt="frnd">
 
     <h1>Meet My Friend</h1>
     
