--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Meet My Friends</title>
     
 </head>
-<body style = "background-image:url('images/sounder(1).jpg'); background-size: 100%;">
-    <img src="./sounder(1).jpg" alt="frnd">
+<body style = "background-image:url('images/sounder(1).jpg'); background-size: 100%">
 
     <h1>Meet My Friend</h1>
     
