--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    
         <h2>Friend 1</h2>
         <p>
+            Welcome
             Hello, I'd like to introduce you to my first friend. They are a kind and caring person who enjoys hiking and photography in their free time. We've been friends for many years.
         </p>
     
